--- a/src/auth.html
+++ b/src/auth.html
@@ -55,7 +55,7 @@
 
     <div class="auth-sep"><span><span>or Sign in with one click</span></span></div>
 
-    <div class="al-share-auth">
+    <div class="al-share-auth" ng-hide="true">
       <ul class="al-share clearfix">
         <li><i class="socicon socicon-facebook" title="Share on Facebook"></i></li>
         <li><i class="socicon socicon-twitter" title="Share on Twitter"></i></li>
