--- a/src/auth.html
+++ b/src/auth.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="BlurAdmin">
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Blur Admin</title>
 
-  <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900&subset=latin,greek,greek-ext,vietnamese,cyrillic-ext,latin-ext,cyrillic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900&subset=latin,greek,greek-ext,vietnamese,cyrillic-ext,latin-ext,cyrillic'
+    rel='stylesheet' type='text/css'>
 
   <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
@@ -23,46 +25,70 @@
   <!-- css files will be automatically insert here -->
   <!-- endinject -->
   <!-- endbuild -->
+  <link rel="stylesheet" href="app/auth.css">
 </head>
-<body>
-<main class="auth-main">
-  <div class="auth-block">
-    <h1>Sign in to Blur Admin</h1>
-    <a href="reg.html" class="auth-link">New to Blur Admin? Sign up!</a>
 
-    <form class="form-horizontal">
-      <div class="form-group">
-        <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+<body ng-controller="authController">
+  <main class="auth-main">
+    <div class="auth-block">
+      <h1>Sign in to ITSL Rudra</h1>
+      <a href="reg.html" class="auth-link">New to ITSL Rudra? Sign up!</a>
 
-        <div class="col-sm-10">
-          <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+      <form class="form-horizontal" ng-submit="doLogin()">
+        <div class="form-group">
+          <label for="userName" class="col-sm-2 control-label">User</label>
+
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="userName" placeholder="User Name">
+          </div>
         </div>
-      </div>
-      <div class="form-group">
-        <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+        <div class="form-group">
+          <label for="userPassword" class="col-sm-2 control-label">Password</label>
 
-        <div class="col-sm-10">
-          <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+          <div class="col-sm-10">
+            <input type="password" class="form-control" id="userPassword" placeholder="Password">
+          </div>
         </div>
-      </div>
-      <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-          <button type="submit" class="btn btn-default btn-auth">Sign in</button>
-          <a href class="forgot-pass">Forgot password?</a>
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <button id="btnlogin" type="submit" class="btn btn-default btn-auth">Sign in</button>
+            <a href class="forgot-pass">Forgot password?</a>
+          </div>
         </div>
+      </form>
+
+      <div class="auth-sep"><span><span>or Sign in with one click</span></span>
       </div>
-    </form>
 
-    <div class="auth-sep"><span><span>or Sign in with one click</span></span></div>
-
-    <div class="al-share-auth" ng-hide="true">
-      <ul class="al-share clearfix">
-        <li><i class="socicon socicon-facebook" title="Share on Facebook"></i></li>
-        <li><i class="socicon socicon-twitter" title="Share on Twitter"></i></li>
-        <li><i class="socicon socicon-google" title="Share on Google Plus"></i></li>
-      </ul>
+      <div class="al-share-auth" ng-hide="true">
+        <ul class="al-share clearfix">
+          <li><i class="socicon socicon-facebook" title="Share on Facebook"></i></li>
+          <li><i class="socicon socicon-twitter" title="Share on Twitter"></i></li>
+          <li><i class="socicon socicon-google" title="Share on Google Plus"></i></li>
+        </ul>
+      </div>
     </div>
-  </div>
-</main>
+  </main>
+
+
+
+  <!-- build:js(src) scripts/vendor.js -->
+  <!-- bower:js -->
+  <!-- run `gulp inject` to automatically populate bower script dependencies -->
+  <!-- endbower -->
+  <!-- endbuild -->
+
+  <!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
+  <!-- inject:js -->
+  <!-- js files will be automatically insert here -->
+  <!-- endinject -->
+
+  <!-- inject:partials -->
+  <!-- angular templates will be automatically converted in js and inserted here -->
+  <!-- endinject -->
+  <!-- endbuild -->
+
+
 </body>
+
 </html>
