--- a/src/auth.html
+++ b/src/auth.html
@@ -28,7 +28,7 @@
   <link rel="stylesheet" href="app/auth.css">
 </head>
 
-<body ng-controller="authController">
+<body ng-controller="authController" ng-cloak>
   <main class="auth-main">
     <div class="auth-block">
       <h1>Sign in to ITSL Rudra</h1>
@@ -47,6 +47,23 @@
 
           <div class="col-sm-10">
             <input type="password" class="form-control" id="userPassword" placeholder="Password">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="userLanguage" class="col-sm-2 control-label">Language</label>
+
+          <div class="col-sm-10">
+
+            <ui-select name="userLanguage" ng-model="selectedLanguage" class="btn-group bootstrap-select form-control" ng-disabled="false"
+              append-to-body="true" search-enabled="false">
+              <ui-select-match placeholder="Standard Select">
+                <span> {{$select.selected.label}}</span>
+              </ui-select-match>
+              <ui-select-choices repeat="standardItem in languageList | filter: $select.search">
+                <span ng-bind-html="standardItem.label"></span>
+              </ui-select-choices>
+            </ui-select>
+
           </div>
         </div>
         <div class="form-group">
