--- a/src/auth.html
+++ b/src/auth.html
@@ -56,18 +56,18 @@
           </div>
         </div>
         <div class="form-group">
-          <label for="userCorpoId" class="col-sm-2 control-label">Corporate Id</label>
+          <label for="userCorpoId" class="col-sm-2 control-label">Customer.Id</label>
 
           <div class="col-sm-10">
-            <input type="text" class="form-control" id="userCorpoId" placeholder="Corporate Id">
+            <input type="text" class="form-control" id="userCorpoId" placeholder="Customer Id">
           </div>
         </div>
-        <div class="form-group">
+        <div class="form-group"> 
           <label for="userLanguage" class="col-sm-2 control-label">Language</label>
 
           <div class="col-sm-10">
-
-            <ui-select name="userLanguage" ng-model="selectedLanguage" class="btn-group bootstrap-select form-control" ng-disabled="false"
+            <select class="form-control" ng-model="selectedLanguage" ng-options="lang.label  for lang in languageList" ></select>
+            <!-- <ui-select name="userLanguage" ng-model="selectedLanguage" class="btn-group bootstrap-select form-control" ng-disabled="false"
               append-to-body="true" search-enabled="false">
               <ui-select-match placeholder="Standard Select">
                 <span> {{$select.selected.label}}</span>
@@ -75,7 +75,7 @@
               <ui-select-choices repeat="standardItem in languageList | filter: $select.search">
                 <span ng-bind-html="standardItem.label"></span>
               </ui-select-choices>
-            </ui-select>
+            </ui-select> -->
 
           </div>
         </div>
