--- a/src/help.html
+++ b/src/help.html
@@ -1,1 +1,14 @@
-Comming Soon...
+Redirecting...
+<script>
+
+    window.location = '/Help?p=1&s='
+
+    var pageId = getQueryString()
+
+    var getQueryString = function ( field, url ) {
+    var href = url ? url : window.location.href;
+    var reg = new RegExp( '[?&]' + field + '=([^&#]*)', 'i' );
+    var string = reg.exec(href);
+    return string ? string[1] : null;
+};
+</script>
