--- a/src/auth.html
+++ b/src/auth.html
@@ -26,6 +26,8 @@
   <!-- endinject -->
   <!-- endbuild -->
   <link rel="stylesheet" href="app/auth.css">
+
+  <!-- <script src="https://www.google.com/jsapi?key=AIzaSyAezBER2MTx0k3xz_O8KYRQwS8Ryhtd2jg"></script> -->
 </head>
 
 <body ng-controller="authController" ng-cloak>
@@ -33,11 +35,11 @@
   <script type="text/javascript">
     function googleTranslateElementInit() {
       new google.translate.TranslateElement({ pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE }, 'google_translate_element');
-    }
+    } 
   </script>
   <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
-  <main class="auth-main">
+  <main class="auth-main" id="main-div">
     <div class="auth-block">
       <h4>Sign in to ITSL Rudra</h4>
       <a href="reg.html" class="auth-link">New to ITSL Rudra? Sign up!</a>
@@ -56,7 +58,8 @@
           <div class="col-sm-10">
             <input type="password" class="form-control" id="userPassword" placeholder="Password">
           </div>
-        </div>
+        </div> 
+        
         <div class="form-group">
           <label for="userCorpoId" class="col-sm-2 control-label">Customer.Id</label>
 
