--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,19 @@
         display: inline !important;
         visibility: visible !important;
       }
-      #listReportViewGrid{
+      #listReportViewGrid {
+        display: none !important;
+        visibility: hidden !important;
+      }
+      #monthYear {
+        display: inline !important;
+        visibility: visible !important;
+      }
+      #CommonPrintGrid {
+        display: block !important;
+        visibility: visible !important;
+      }
+      #CommonViewGrid {
         display: none !important;
         visibility: hidden !important;
       }
