--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,10 @@
         display: inline !important;
         visibility: visible !important;
       }
+      #listReportPrintFilter {
+        display: inline !important;
+        visibility: visible !important;
+      }
       #listReportViewGrid {
         display: none !important;
         visibility: hidden !important;
