--- a/src/auth.html
+++ b/src/auth.html
@@ -2,145 +2,201 @@
 <html lang="en" ng-app="BlurAdmin">
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Blur Admin</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Blur Admin</title>
 
-  <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900&subset=latin,greek,greek-ext,vietnamese,cyrillic-ext,latin-ext,cyrillic'
-    rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900&subset=latin,greek,greek-ext,vietnamese,cyrillic-ext,latin-ext,cyrillic'
+        rel='stylesheet' type='text/css'>
 
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicon-96x96.png">
 
-  <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
-  <!-- bower:css -->
-  <!-- run `gulp inject` to automatically populate bower styles dependencies -->
-  <!-- endbower -->
-  <!-- endbuild -->
 
-  <!-- build:css({.tmp/serve,src}) styles/auth.css -->
-  <!-- inject:css -->
-  <!-- css files will be automatically insert here -->
-  <!-- endinject -->
-  <!-- endbuild -->
-  <link rel="stylesheet" href="app/auth.css">
+    <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
+    <!-- bower:css -->
+    <!-- run `gulp inject` to automatically populate bower styles dependencies -->
+    <!-- endbower -->
+    <!-- endbuild -->
 
-  <!-- <script src="https://www.google.com/jsapi?key=AIzaSyAezBER2MTx0k3xz_O8KYRQwS8Ryhtd2jg"></script> -->
+
 </head>
 
 <body ng-controller="authController" ng-cloak>
-  <div id="google_translate_element"></div>
-  <script type="text/javascript">
-    function googleTranslateElementInit() {
-      new google.translate.TranslateElement({ pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE }, 'google_translate_element');
-    } 
-  </script>
-  <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <form class="form-horizontal" ng-submit="doLogin()">
+        <section id="login">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <div class="form-wrap">
+                            <h1>Sign in to HR Raj</h1>
+                            <form role="form" action="javascript:;" method="post" id="login-form" autocomplete="off">
+                                <div class="form-group">
+                                    <label for="userName" class="sr-only">User Name</label>
+                                    <input type="text" name="userName" id="userName" class="form-control" placeholder="User Name">
+                                </div>
+                                <div class="form-group">
+                                    <label for="userPassword" class="sr-only">Password</label>
+                                    <input type="password" name="key" id="userPassword" class="form-control" placeholder="Password">
+                                </div>
+                                <div class="form-group">
+                                    <label for="userCorpoId" class="sr-only">Customer Id</label>
+                                    <input type="text" name="userName" id="userCorpoId" class="form-control" placeholder="Customer Id">
+                                </div>
+                                <div class="form-group">
+                                    <label for="userLanguage" class="sr-only">Language</label>
+                                    <select class="form-control" ng-model="selectedLanguage" ng-options="lang.label  for lang in languageList"></select>
+                                </div>
+                                <div class="form-group" ng-show="showDevAPI">
+                                    <label for="api" class="sr-only">API Url</label>
+                                    <input type="text" class="form-control" id="api" placeholder="Dev API URL" ng-model="devAPIUrl">
+                                </div>
 
-  <main class="auth-main" id="main-div">
-    <div class="auth-block">
-      <h4>Sign in to ITSL Rudra</h4>
-      <a href="reg.html" class="auth-link">New to ITSL Rudra? Sign up!</a>
+                                <div class="checkbox">
+                                    <span class="character-checkbox" onclick="showPassword()"></span>
+                                    <span class="label">Show password</span>
+                                </div>
+                                <input type="submit" id="btnlogin" class="btn btn-custom btn-lg btn-block" value="Sign in">
+                            </form>
+                            <a href="javascript:;" class="forget" data-toggle="modal" data-target=".forget-modal">Forgot your password?</a>
+                            <hr>
+                        </div>
+                    </div>
+                    <!-- /.col-xs-12 -->
+                </div>
+                <!-- /.row -->
+            </div>
+            <!-- /.container -->
+        </section>
+    </form>
+    <!-- build:js(src) scripts/vendor.js -->
+    <!-- bower:js -->
+    <!-- run `gulp inject` to automatically populate bower script dependencies -->
+    <!-- endbower -->
+    <!-- endbuild -->
 
-      <form class="form-horizontal" ng-submit="doLogin()">
-        <div class="form-group">
-          <label for="userName" class="col-sm-2 control-label">User</label>
+    <!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
+    <!-- inject:js -->
+    <!-- js files will be automatically insert here -->
+    <!-- endinject -->
 
-          <div class="col-sm-10">
-            <input type="text" class="form-control" id="userName" placeholder="User Name">
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="userPassword" class="col-sm-2 control-label">Password</label>
-
-          <div class="col-sm-10">
-            <input type="password" class="form-control" id="userPassword" placeholder="Password">
-          </div>
-        </div> 
-        
-        <div class="form-group">
-          <label for="userCorpoId" class="col-sm-2 control-label">Customer.Id</label>
-
-          <div class="col-sm-10">
-            <input type="text" class="form-control" id="userCorpoId" placeholder="Customer Id">
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="userLanguage" class="col-sm-2 control-label">Language</label>
-
-          <div class="col-sm-10">
-            <select class="form-control" ng-model="selectedLanguage" ng-options="lang.label  for lang in languageList"></select>
-            <!-- <ui-select name="userLanguage" ng-model="selectedLanguage" class="btn-group bootstrap-select form-control" ng-disabled="false"
-              append-to-body="true" search-enabled="false">
-              <ui-select-match placeholder="Standard Select">
-                <span> {{$select.selected.label}}</span>
-              </ui-select-match>
-              <ui-select-choices repeat="standardItem in languageList | filter: $select.search">
-                <span ng-bind-html="standardItem.label"></span>
-              </ui-select-choices>
-            </ui-select> -->
-
-          </div>
-        </div>
-        <div class="form-group">
-          <div class="col-sm-offset-2 col-sm-10">
-            <button id="btnlogin" type="submit" class="btn btn-default btn-auth">Sign in</button>
-            <a href class="forgot-pass">Forgot password?</a>
-          </div>
-        </div>
-      </form>
-
-      <div class="auth-sep">
-        <span>
-          <span>or Sign in with one click</span>
-        </span>
-      </div> 
-      <div>
-        <div class="form-group" ng-show="showDevAPI">
-          <label for="api" class="col-sm-2 control-label">API Url</label>
-
-          <div class="col-sm-10">
-            <input type="text" class="form-control" id="api" placeholder="Dev API URL" ng-model="devAPIUrl">
-          </div>
-        </div>
-      </div>
-      <div class="al-share-auth" ng-hide="true">
-        <ul class="al-share clearfix">
-          <li>
-            <i class="socicon socicon-facebook" title="Share on Facebook"></i>
-          </li>
-          <li>
-            <i class="socicon socicon-twitter" title="Share on Twitter"></i>
-          </li>
-          <li>
-            <i class="socicon socicon-google" title="Share on Google Plus"></i>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </main>
-
-
-
-  <!-- build:js(src) scripts/vendor.js -->
-  <!-- bower:js -->
-  <!-- run `gulp inject` to automatically populate bower script dependencies -->
-  <!-- endbower -->
-  <!-- endbuild -->
-
-  <!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
-  <!-- inject:js -->
-  <!-- js files will be automatically insert here -->
-  <!-- endinject -->
-
-  <!-- inject:partials -->
-  <!-- angular templates will be automatically converted in js and inserted here -->
-  <!-- endinject -->
-  <!-- endbuild -->
-
-
+    <!-- inject:partials -->
+    <!-- angular templates will be automatically converted in js and inserted here -->
+    <!-- endinject -->
+    <!-- endbuild -->
 </body>
 
 </html>
+
+
+<style>
+    /*    --------------------------------------------------
+	:: Login Section
+	-------------------------------------------------- */
+
+    #login {
+        padding-top: 50px
+    }
+
+    #login .form-wrap {
+        width: 30%;
+        margin: 0 auto;
+    }
+
+    #login h1 {
+        color: #1fa67b;
+        font-size: 18px;
+        text-align: center;
+        font-weight: bold;
+        padding-bottom: 20px;
+    }
+
+    #login .form-group {
+        margin-bottom: 25px;
+    }
+
+    #login .checkbox {
+        margin-bottom: 20px;
+        position: relative;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        -o-user-select: none;
+        user-select: none;
+    }
+
+    #login .checkbox.show:before {
+        content: '\e013';
+        color: #1fa67b;
+        font-size: 17px;
+        margin: 1px 0 0 3px;
+        position: absolute;
+        pointer-events: none;
+        font-family: 'Glyphicons Halflings';
+    }
+
+    #login .checkbox .character-checkbox {
+        width: 25px;
+        height: 25px;
+        cursor: pointer;
+        border-radius: 3px;
+        border: 1px solid #ccc;
+        vertical-align: middle;
+        display: inline-block;
+    }
+
+    #login .checkbox .label {
+        color: #6d6d6d;
+        font-size: 13px;
+        font-weight: normal;
+    }
+
+    #login .btn.btn-custom {
+        font-size: 14px;
+        margin-bottom: 20px;
+    }
+
+    #login .forget {
+        font-size: 13px;
+        text-align: center;
+        display: block;
+    }
+
+    /*    --------------------------------------------------
+	:: Inputs & Buttons
+	-------------------------------------------------- */
+
+    .form-control {
+        color: #212121;
+    }
+
+    .btn-custom {
+        color: #fff;
+        background-color: #1fa67b;
+    }
+
+    .btn-custom:hover,
+    .btn-custom:focus {
+        color: #fff;
+    }
+
+    /*    --------------------------------------------------
+    :: Footer
+	-------------------------------------------------- */
+
+    #footer {
+        color: #6d6d6d;
+        font-size: 12px;
+        text-align: center;
+    }
+
+    #footer p {
+        margin-bottom: 0;
+    }
+
+    #footer a {
+        color: inherit;
+    }
+</style>
