--- a/src/index.html
+++ b/src/index.html
@@ -79,11 +79,10 @@
         <div ui-view autoscroll="true" autoscroll-body-top></div>
       </div>
     </div>
-
+<!-- 
     <footer class="al-footer clearfix">
     <div class="al-footer-right">Powered by Saaksshaat <i class="ion-heart"></i></div>
     <div class="al-footer-main clearfix">
-      <!-- <div class="al-copy">ITSL Limited 2017</div> -->
       <ul class="al-share clearfix">
         <li><i class="socicon socicon-facebook"></i></li>
         <li><i class="socicon socicon-twitter"></i></li>
@@ -91,7 +90,7 @@
         <li><i class="socicon socicon-github"></i></li>
       </ul>
     </div>
-  </footer>
+  </footer> -->
 
     <back-top></back-top>
   </main>
