--- a/src/auth.html
+++ b/src/auth.html
@@ -106,24 +106,94 @@
             display: block;
             margin-top: 10px;
         }
+
+        .g-div {
+            position: absolute;
+            top: calc(50% - 6px);
+            left: calc(50% - 160px);
+            text-align: center;
+            width: 320px;
+            font-weight: bold;
+        }
+
+        .loader-gmail {
+            padding: 1px;
+            overflow: hidden;
+            border: 1px solid #a4a4a4;
+        }
+
+        .progress {
+            width: 320px;
+            height: 8px;
+            background-image: linear-gradient(135deg, #6187f2 0%, #6187f2 25%, #5679da 25%, #5679da 50%, #6187f2 50%, #6187f2 75%, #5679da 75%, #5679da 100%);
+            background-repeat: repeat;
+            background-position: 0px 0px;
+            background-size: 16px 16px;
+            background-clip: content-box;
+            animation: loading 1s linear infinite;
+            -o-animation: loading 1s linear infinite;
+            -moz-animation: loading 1s linear infinite;
+            -webkit-animation: loading 1s linear infinite;
+        }
+
+        @keyframes loading {
+            from {
+                background-position: 0px 0px;
+            }
+            to {
+                background-position: -16px 0px;
+            }
+        }
+
+        @-webkit-keyframes loading {
+            from {
+                background-position: 0px 0px;
+            }
+            to {
+                background-position: -16px 0px;
+            }
+        }
+
+        @-moz-keyframes loading {
+            from {
+                background-position: 0px 0px;
+            }
+            to {
+                background-position: -16px 0px;
+            }
+        }
+
+        @-o-keyframes loading {
+            from {
+                background-position: 0px 0px;
+            }
+            to {
+                background-position: -16px 0px;
+            }
+        }
     </style>
 
 </head>
 
 <body ng-controller="authController" ng-cloak>
-
-    <div class="container">
+    <div class="g-div" ng-if="keyValiditing">
+        Loading
+        <span class="progress-view">0%</span>
+        <div class="loader-gmail">
+            <div class="progress"></div>
+        </div>
+    </div>
+    <div class="container" ng-if="!keyValiditing">
         <div class="row">
             <div class="col-sm-6 col-md-4 col-md-offset-4">
-                <h1 class="text-center login-title">Sign in to goHr</h1>
+                <h1 ng-if="key.vl" class="text-center login-title">Sign in to goHr</h1>
                 <div class="account-wall">
-                    <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120"
-                        alt="">
+                    <img class="profile-img" src="{{logoUrl}}" alt="">
                     <form class="form-signin" ng-submit="doLogin()" ng-if="key.vl">
                         <input type="text" class="form-control" placeholder="User" id="userName" required autofocus>
                         <input id="userPassword" type="password" class="form-control" placeholder="Password" required>
                         <input ng-if="key.multi" ng-model="key.corp" type="text" name="userName" id="userCorpoId" class="form-control" placeholder="Customer Id">
-                        <select class="form-control" ng-model="selectedLanguage" ng-options="lang.label  for lang in languageList"></select>
+                        <select ng-if="key.lang" class="form-control" ng-model="selectedLanguage" ng-options="lang.label  for lang in languageList"></select>
                         <input ng-if="showDevAPI" type="text" class="form-control" id="api" placeholder="Dev API URL" ng-model="devAPIUrl">
 
                         <button class="btn btn-lg btn-primary btn-block" type="submit">
@@ -138,79 +208,21 @@
                         <div class="row">
                             <div class="col-md-12" style="padding-left: 40px;">
 
-                                <h3>This copy is not registered, please contact Administrator </h3>
-                                <p>
-                                    <a class="pull-left" href="{{key.url}}">Download Key File</a>
+                                <h3 ng-if="!keyValiditing">This copy is not registered, please contact Administrator </h3>
+                                <h2 ng-if="keyValiditing">Please wait...</h2>
+                                <p class="small-font">
+                                    <a href="mailto:neeraj@saaksshat.com">neeraj@saaksshat.com</a>
                                 </p>
+                                
                             </div>
                         </div>
                     </form>
                 </div>
-                <!-- <a href="#" class="text-center new-account">Create an account </a> -->
             </div>
         </div>
     </div>
 
-    <!-- <form class="form-horizontal" ng-submit="doLogin()" ng-if="false">
-        <section id="login">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xs-12">
-                        <div class="form-wrap" ng-if="key.vl">
-                            <h1>Sign in to </h1>
-                            <form role="form" action="javascript:;" method="post" id="login-form" autocomplete="off">
-                                <div class="form-group">
-                                    <label for="userName" class="sr-only">User Name</label>
-                                    <input type="text" name="userName" id="userName" class="form-control" placeholder="User Name">
-                                </div>
-                                <div class="form-group">
-                                    <label for="userPassword" class="sr-only">Password</label>
-                                    <input type="password" name="key" id="userPassword" class="form-control" placeholder="Password">
-                                </div>
-                                <div class="form-group">
-                                    <label for="userCorpoId" class="sr-only">Customer Id</label>
-                                    <input type="text" name="userName" id="userCorpoId" class="form-control" placeholder="Customer Id">
-                                </div>
-                                <div class="form-group">
-                                    <label for="userLanguage" class="sr-only">Language</label>
-                                    <select class="form-control" ng-model="selectedLanguage" ng-options="lang.label  for lang in languageList"></select>
-                                </div>
-                                <div class="form-group" ng-show="showDevAPI">
-                                    <label for="api" class="sr-only">API Url</label>
-                                    <input type="text" class="form-control" id="api" placeholder="Dev API URL" ng-model="devAPIUrl">
-                                </div>
 
-                                <div class="checkbox">
-                                    <span class="character-checkbox" onclick="showPassword()"></span>
-                                    <span class="label">Show password</span>
-                                </div>
-                                <input type="submit" id="btnlogin" class="btn btn-custom btn-lg btn-block" value="Sign in">
-                            </form>
-                            <a href="javascript:;" class="forget" data-toggle="modal" data-target=".forget-modal">Forgot your password?</a>
-                            <hr>
-                        </div>
-                        <div ng-if="!key.vl">
-                            <form role="form" action="javascript:;" method="post" id="login-form" autocomplete="off">
-                                <h3>This copy is not registered, please contact Administrator </h3>
-                                <p>
-                                    <a href="{{key.url}}">Download Key File</a>
-                                </p>
-                                <p>
-                                    <h4>Upload Licence File</h4>
-                                    <div class="fileinput fileinput-new" data-provides="fileinput">
-                                        <input name="file" type="file" file-model="file" />
-                                    </div>
-                                </p>
-                                <p>
-                                    <button class="btn " ng-click="uploadLicFile()">Upload File</button>
-                                </p>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </form> -->
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
     <!-- run `gulp inject` to automatically populate bower script dependencies -->
