--- a/src/auth.html
+++ b/src/auth.html
@@ -211,7 +211,7 @@
                                 <h3 ng-if="!keyValiditing">This copy is not registered, please contact Administrator </h3>
                                 <h2 ng-if="keyValiditing">Please wait...</h2>
                                 <p class="small-font">
-                                    <a href="mailto:neeraj@saaksshat.com">neeraj@saaksshat.com</a>
+                                    <a href="mailto:neeraj@saaksshaat.com">neeraj@saaksshat.com</a>
                                 </p>
                                 
                             </div>
