--- a/src/index.html
+++ b/src/index.html
@@ -157,7 +157,7 @@
       border: 1px solid #a4a4a4;
   }
 
-  .progress {
+  /* .progress {
       width: 320px;
       height: 8px;
       background-image: linear-gradient(135deg, #6187f2 0%, #6187f2 25%, #5679da 25%, #5679da 50%, #6187f2 50%, #6187f2 75%, #5679da 75%, #5679da 100%);
@@ -169,7 +169,7 @@
       -o-animation: loading 1s linear infinite;
       -moz-animation: loading 1s linear infinite;
       -webkit-animation: loading 1s linear infinite;
-  }
+  } */
 
   @keyframes loading {
       from {
